Cleaned up placeholder content. Fixed layout bug with login screen css

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -166,17 +166,8 @@ main {
   display: flex;
   flex-wrap: wrap;
   flex-grow: 1;
-  margin: auto;
-  
+  /* margin: auto;  */
   max-width: 1800px;
-}
-
-/* nav, */
-main {
-  
-  /* max-width: 1800px; */
-  
-  
 }
 
 img {
@@ -270,8 +261,7 @@ nav #about{
 
 [data-id="nav"]:hover {
   text-decoration: underline;
-  font-weight: bolder;
-  
+  font-weight: bolder;  
 }
 
 
@@ -541,7 +531,9 @@ aside {
 
 /*----------------------------------------------------------------------------*/
 /* LOGINS */
-
+.landing{
+  width: 100%;
+}
 .login-section {
   
   display: flex;
@@ -617,7 +609,7 @@ form .form-input {
   align-content: center;  
   padding: 0.75rem;
   color: #1a1a1a;
-  background-color: var(--light2);
+  background-color: var(--light);
   margin: 0.625rem 0;
   font-size: 1.2rem;
   border: 1px solid #484848;
@@ -625,9 +617,12 @@ form .form-input {
   max-width: 400px;
 }
 
+form .form-input:not(:placeholder-shown),
 form .form-input:focus {
   background-color: var(--light3);
 }
+
+
 
 form .form-input.form-input-squared {
   border-radius: 0;
@@ -837,7 +832,7 @@ form .form-input.form-input-squared {
   }
   
   .login-card {
-    width: 60%;
+    width: 100%;
     max-width: 641px;
   }
 
@@ -872,6 +867,9 @@ form .form-input.form-input-squared {
   .card{
     margin: 1rem .5rem;
   }
+  [data-id="nav-spacer"] {
+    display: none;
+  }
 
   .login-card {
     width: 90%;
@@ -897,7 +895,10 @@ form .form-input.form-input-squared {
     flex: 100%;
     padding: 0;
     margin: 0;
-    
+  }
+
+  [data-id="nav-spacer"] {
+    display: none;
   }
   
   aside,
